fix: add colour contrast to links (#84)

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -14,3 +14,11 @@ h2 {
   font-size: 2.8rem;
   margin: 0;
 }
+
+a {
+ color: #9c6c2d;
+
+ &:hover {
+   text-decoration: none;
+ }
+}
